# leti-esoft-25-26-B5

./: CMakeLists.txt
ConsoleApp/: CMakeLists.txt  ConsoleApp.cpp
ConsoleApp/domain/http/: RestClient.h
ConsoleApp/domain/ui/: VaccineTypeUI.h  VaccineUI.h
ConsoleApp/sources/domain/http/: RestClient.cpp
ConsoleApp/sources/domain/shared/: Result.cpp  StringUtils.cpp
ConsoleApp/sources/domain/ui/: VaccineTypeUI.cpp  VaccineUI.cpp
Core/: CMakeLists.txt
Core/headers/domain/model/: AdverseReaction.h  Appointment.h  AppointmentStatus.h  CommunityMassVaccinationCenter.h  DGSAdministrator.h  HealthcareCenter.h  Nurse.h  Outbreak.h  Receptionist.h  SNSUser.h  StaffMember.h  VaccinationCenter.h  VaccinationCertificate.h  VaccinationEvent.h  Vaccine.h  VaccineType.h
Core/sources/domain/model/: AdverseReaction.cpp  Appointment.cpp  SNSUser.cpp  StaffMember.cpp  VaccinationCenter.cpp  VaccinationCertificate.cpp  VaccinationEvent.cpp  Vaccine.cpp  VaccineType.cpp
CoreTests/: CMakeLists.txt
RestAPI/: CMakeLists.txt  RestAPI.cpp
RestAPI/headers/: ApiController.h  HttpHelpers.h  JsonUtils.h  RestApiServer.h  Vaccine.h  VaccineRouter.h  VaccineService.h  VaccineTypeRouter.h
RestAPI/headers/controllers/restapi/: Auth.h  CategoryController.h  HttpResult.h  HttpStatus.h
RestAPI/postmanTests/: Vaccines-CRUD.postman_collection.json
RestAPI/source/: RestApiServer.cpp  VaccineRouter.cpp  VaccineService.cpp  VaccineTypeRouter.cpp
docs/: README.md  TeamMembersAndTasks.md
docs/Sprint 1/Global_Artifacts/: Domain Model.puml  Glossary.md  TeamMembersAndTasks.md  UCD.md  UCD.puml  suplementary-specification.md
docs/Sprint 1/Global_Artifacts/puml/: DM.puml
docs/system-documentation/US10/: US10.md
docs/system-documentation/US10/puml/: US10-CD.puml  US10-DM.puml  US10-SD.puml  US10-SSD.puml
docs/system-documentation/US11/: US11.md
docs/system-documentation/US11/puml/: US11-CD.puml  US11-DM.puml  US11-SD.puml  US11-SSD.puml
docs/system-documentation/US12/: US12.md
docs/system-documentation/US12/puml/: US12-CD.puml  US12-DM.puml  US12-SD.puml  US12-SSD.puml
docs/system-documentation/US13/: US13.md
docs/system-documentation/US13/puml/: US13-CD.puml  US13-DM.puml  US13-SD.puml  US13-SSD.puml
docs/system-documentation/US14/: US14.md
docs/system-documentation/US14/puml/: US14-CD.puml  US14-DM.puml  US14-SD.puml  US14-SSD.puml
docs/system-documentation/US15/: US15.md
docs/system-documentation/US15/puml/: US15-CD.puml  US15-DM.puml  US15-SD.puml  US15-SSD.puml
docs/system-documentation/US20/: US20.md
docs/system-documentation/US20/puml/: US20-CD.puml  US20-DM.puml  US20-SD.puml  US20-SSD.puml
docs/system-documentation/US21/: US21.md
docs/system-documentation/US21/puml/: US21-CD-RestAPI.puml  US21-CD.puml  US21-DM.puml  US21-SD-RestAPI-CREATE.puml  US21-SD-RestAPI-DELETE.puml  US21-SD-RestAPI-READ.puml  US21-SD-RestAPI-UPDATE.puml  US21-SD.puml  US21-SSD.puml
docs/system-documentation/US22/: US22.md
docs/system-documentation/US22/puml/: CD-RestAPI.puml  SD-RestAPI-CREATE.puml  SD-RestAPI-DELETE.puml  SD-RestAPI-READ.puml  SD-RestAPI-UPDATE.puml  US22-CD.puml  US22-DM.puml  US22-SD.puml  US22-SSD.puml
docs/system-documentation/US30/: US30.md
docs/system-documentation/US30/puml/: US30-CD.puml  US30-DM.puml  US30-SD.puml  US30-SSD.puml
docs/system-documentation/US40/: US40.md
docs/system-documentation/US40/puml/: US40-CD-RestAPI.puml  US40-CD.puml  US40-DM.puml  US40-SD-RestAPI-READ.puml  US40-SD-RestAPI.puml  US40-SD.puml  US40-SSD.puml
docs/system-documentation/US41/: US41.md
docs/system-documentation/US41/puml/: US41-CD-RestAPI.puml  US41-CD.puml  US41-DM.puml  US41-SD-RestAPI-CREATE.puml  US41-SD-RestAPI-READ.puml  US41-SD.puml  US41-SSD.puml
docs/system-documentation/global-artifacts/: Glossary.md  README.md  TeamMembersAndTasks.md  UCD.md  analysis.md
docs/system-documentation/global-artifacts/puml/: DM.puml  UCD.puml
postman/: VaccineApi.postman_collection.json
