project(Core)

add_library(Core ../../../CLionProjects/leti-esoft-25-26-B5/ConsoleApp/domain/shared/Result.h ../../../CLionProjects/leti-esoft-25-26-B5/ConsoleApp/domain/shared/StringUtils.h ../../../CLionProjects/leti-esoft-25-26-B5/ConsoleApp/sources/domain/shared/Result.cpp ../../../CLionProjects/leti-esoft-25-26-B5/ConsoleApp/sources/domain/shared/StringUtils.cpp)